project(PraktikumAES)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
        ${PROJECT_SOURCE_DIR}/CMakeModules)

FIND_PACKAGE(CryptoPP REQUIRED)

INCLUDE_DIRECTORIES(${CRYPTOPP_INCLUDE_DIR})

add_executable(PraktikumAES main.cpp GF256.cpp GF256.h AES_Algorithm.cpp AES_Algorithm.h)
TARGET_LINK_LIBRARIES(PraktikumAES ${CRYPTOPP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
